Beveling edges perpendicular to sharp edges #39174

Closed
opened 2014-03-13 23:06:00 +01:00 by alekulyn · 7 comments

System Information
Windows 7, Mobile Intel 4 Series Express Chipset Family

Blender Version
Broken: 2.70 RC2 (Hash: 2525f9c)

Short description of error
When I try to bevel non-sharp edges that intersect a sharp edge, the sharpness is cleared.

Exact steps for others to reproduce the error
Create a normal cylinder (ngon caps).
Select the edge ring of the length of the cylinder and mark them all sharp.
Loop cut through the edge ring.
Select the previous loop cut and bevel it.

Here is the attached .blend:
test.blend

**System Information** Windows 7, Mobile Intel 4 Series Express Chipset Family **Blender Version** Broken: 2.70 RC2 (Hash: 2525f9c) **Short description of error** When I try to bevel non-sharp edges that intersect a sharp edge, the sharpness is cleared. **Exact steps for others to reproduce the error** Create a normal cylinder (ngon caps). Select the edge ring of the length of the cylinder and mark them all sharp. Loop cut through the edge ring. Select the previous loop cut and bevel it. Here is the attached .blend: [test.blend](https://archive.blender.org/developer/F81003/test.blend)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @alekulyn

Added subscriber: @alekulyn

Added subscriber: @mont29

Added subscriber: @mont29
Howard Trickey was assigned by Bastien Montagne 2014-03-14 12:10:20 +01:00
Member

Yes, looks like I should copy over properties like sharpness when rebuilding polygons after a bevel.

Yes, looks like I should copy over properties like sharpness when rebuilding polygons after a bevel.

This issue was referenced by 6bde9a52f9

This issue was referenced by 6bde9a52f9270841331c7762a5df9505894d962a
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Member

Closed by commit 6bde9a52f9.

Closed by commit 6bde9a52f9.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#39174
No description provided.